--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <script src="js/vendor/classie.js"></script>
     <script src="js/vendor/demo1.js"></script>
     <script src="js/vendor/imagesloaded.js"></script>
-    <script src="js/vendor/_main.js"></script>
+    <script src="js/vendor/mainvendor.js"></script>
     <script src="js/vendor/skrollr.js"></script>
 </body>
 </html>
